# Wakka

./: .gitignore  LICENSE  PKGBUILD  PKGBUILD_old  README.md  __main__.py  estructura.txt  main.py  pyproject.toml  requirements.txt  wakka  wakka.desktop  wakka.install
.safe-agent/chat/: sessions.json
core/: askpass.py  cache_manager.py  config_manager.py  constants.py  package_manager.py  privilege_helper.py  repo_manager.py  scheduler.py
install/: install.sh  wakka-mime.xml
main/: __init__.py  main.py
main/core/: __init__.py  config_manager.py  repo_manager.py  scheduler.py
main/install/: 10-wakka.rules  wakka-autostart.desktop  wakka-mime.xml  wakka-shutdown.service  wakka.desktop
main/modules/: askpass.py  cache_manager.py  constants.py  package_manager.py  repo_manager.py
main/tests/: pytest.ini  test_config_manager.py  test_package_manager.py  test_repo_manager.py  test_translations.py
main/ui/: __init__.py  main_window.py
resources/: com.wakka.package-manager.policy  install_policy.sh  wakka-helper
scripts/: compile_translations.sh  extract_translations.sh
src/: main.py  wakka  wakka.desktop
src/core/: arch_wiki.py  cache_manager.py  config_manager.py  google_client.py  logging_setup.py  package_converter.py  package_info_client.py  pacman_text.py  system_tray copy.py  system_tray.py  translator.py  yay_wrapper.py
src/gui/: main_window copy.py  main_window.py  widgets.py
src/i18n/: TEMPLATE.TS  en_US.qm  en_US.ts  (+27 more)
tests/: test_config_manager.py  test_yay_wrapper.py
ui/: main_window.py
wakka/: FETCH_HEAD  config  packed-refs
(+66 files in other folders)
